# OpenThermo

./: .gitignore  CMakeLists.txt  Makefile  README.md  settings.ini
.github/workflows/: buildwin.yml  docs.yml  ot.yml  sync-dev.yml  test-windows.yml
docs/: conf.py  developer.rst  index.rst  installation.rst  requirements.txt  usage.rst
resources/: icon.rc
src/: atommass.cpp  atommass.h  calc.cpp  calc.h  chemsys.h  defvar.h  help_utils.cpp  help_utils.h  loadfile.cpp  loadfile.h  main.cpp  omp_config.h  symmetry.cpp  symmetry.h  util.cpp  util.h  version.h
tests/: BIH-conformers-1.otm  CO.otm  CuL10SO2Cl-C8H15CH3CF3-R-TS-3.otm  Gaussian_16_H2CO_freqotm  NWChem_NH2COH_optfreq.otm  Orca-triplet.otm  Orca-triplet.out  QChem-C2H4.out  Qchem-OPT_water.out  conformer_ensemble.list  invalid_input.txt  reference_values.json  run_tests.py
